syntax = "proto3";
package didcomm;

option go_package = "didcomm/issuer/api";

message CredentialAttribute {
  string name = 1;
  string value = 2;
}

message OfferCredentialRequest {
  string connectionID = 1;
  string schemaName = 2;
  repeated CredentialAttribute attributes = 3;
  string comment = 4;
}

message OfferCredentialResponse {
  string threadID = 1;
}

service Issuer {
  rpc OfferCredential (InvitationRequest) returns (InvitationResponse) {}
}